<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomBreakDown">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#E6E6FA">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/salary" />

            <TextView
                android:id="@+id/tv_title_custom"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/tv_title_custom"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_BillDetails_word"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/tv_BillDetails_word"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total_price_equal_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/tv_total_price_equal_word"
                    android:textSize="20sp"
                    android:background="#ADDFFF"/>

                <TextView
                    android:id="@+id/tv_head_count_equal_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/tv_head_count_equal_word"
                    android:textSize="20sp"
                    android:background="#ADDFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total_price_equal_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/tv_total_price_equal_num"
                    android:textSize="45sp"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/tv_head_count_equal_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:text="@string/tv_head_count_equal_num"
                    android:textSize="45sp"
                    android:background="@drawable/border"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:gravity="center"
                android:text="@string/tv_filter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rb_percentage_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_percentage_word" />

                    <RadioButton
                        android:id="@+id/rb_ratio_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_ratio_word" />

                    <RadioButton
                        android:id="@+id/rb_amount_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_amount_word" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/bt_custom_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_custom_method" />

            <TableLayout
                android:id="@+id/table_layout_input"
                android:layout_width="match_parent"
                android:layout_height="240sp">


            </TableLayout>

            <Button
                android:id="@+id/bt_calculate_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_calculate_custom" />

            <LinearLayout
                android:id="@+id/price_per_head_show"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:orientation="vertical" >

            </LinearLayout>

            <Button
                android:id="@+id/share_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_Button" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>