<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EqualBreakDown"
    android:background="#E6E6FA">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/salary" />

    <TextView
        android:id="@+id/tv_equalBD_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/tv_equalBD_title"
        android:gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_BillDetails_word"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/tv_BillDetails_word"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_price_equal_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/tv_total_price_equal_word"
            android:textSize="20sp"
            android:background="#ADDFFF"/>

        <TextView
            android:id="@+id/tv_head_count_equal_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/tv_head_count_equal_word"
            android:textSize="20sp"
            android:background="#ADDFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_price_equal_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/tv_total_price_equal_num"
            android:textSize="45sp"
            android:gravity="center"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/tv_head_count_equal_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/tv_head_count_equal_num"
            android:textSize="45sp"
            android:gravity="center"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:background="#E6E6FA"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price_per_head_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="#ADD8E6"
            android:gravity="center"
            android:text="@string/tv_price_per_head_word"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_price_per_head_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="#ADD8E6"
            android:gravity="center"
            android:text="@string/tv_price_per_head_num"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>